--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is your website</h1>
+   <p style="text-align:center;">
+    <img src="https://www.computerhope.com/cdn/media/logo-200-gray.png" alt="Logo"></p>
 </body>
 </html>
